    some syntax errors (Closes: #706221)
  * Set default polling interval on removable devices as well, for kernels
    which have "block" built in instead of being a module. (Closes: #713877)
  * Make sd_login_monitor_new() work for logind without systemd.
  * Cherry-pick upstream fix for polkit permissions for rebooting with
    multiple sessions.

  [ Marco d'Itri ]
  * preinst: check for all the system calls required by modern releases
    of udev. (Closes: #648325)
  * Updated fbdev-blacklist.conf for recent kernels.
  * Do not blacklist viafb because it is required on the OLPC XO-1.5.
    (Closes: #705792)
  * Remove write_cd_rules and the associated rules which create "persistent"
    symlinks for CD/DVD devices and replace them with more rules in
    60-cdrom_id, which will create symlinks for one at random among the
    devices installed. Since the common case is having a single device
    then everything will work out just fine most of the times...
    (Closes: #655924)

  [ Michael Stapelberg ]
  * Add systemd-dbg package, thanks Daniel Schaal (Closes: #742724).
  * Switch from gitpkg to git-buildpackage. Update README.source accordingly.
  * Make libpam-systemd depend on systemd-sysv | systemd-shim. Packages that
    need logind functionality should depend on libpam-systemd.

  [ Michael Biebl ]
  * Do not send potentially private fstab information without prior user
    confirmation. (Closes: #743158)
  * Add support for LSB facilities defined by insserv.
    Parse /etc/insserv.conf.d content and /etc/insserv.conf and generate
    systemd unit drop-in files to add corresponding dependencies. Also ship
    targets for the Debian specific $x-display-manager and
    $mail-transport-agent system facilities. (Closes: #690892)
  * Do not accidentally re-enable /var/tmp cleaning when migrating the TMPTIME
    setting from /etc/default/rcS. Fix up existing broken configurations.
    (Closes: #738862)
