@@ -1,15 +1,0 @@
-# This file does not exist. Please do not ask the Debian maintainer about it.
-# If you need manually created devices, create them in /lib/udev/devices/ .
-
-D pts
-D shm
-
-M null		c   1 3
-M console	c   5 1
-
-# Hic sunt leones.
-M ppp		c 108 0
-M loop0		b   7 0
-D net
-M net/tun	c  10 200
-
