@@ -1,1 +1,2 @@
 rm_conffile /etc/init.d/udev-mtab 204-1~
+rm_conffile /etc/udev/links.conf 204-9~
